# vr-compress

./: .gitignore  CMakeLists.txt  ReadMe.md  TODO.md  basic_player.cpp  cmp_block.cpp  cmp_file.cpp  decoder.cpp  defs.h  encoder.cpp  raw_video.cpp  raw_video.h  utils.cpp  vr_encoder.cpp  vr_player.cpp
include/: cmp_block.h  cmp_file.h  codec.h  decoder.h  defs.h  raw_video.h  utils.h
